--- a/src/ATS/Bundle/MovieBundle/Resources/config/routing.yml
+++ b/src/ATS/Bundle/MovieBundle/Resources/config/routing.yml
@@ -2,6 +2,14 @@ home:
     type:     annotation
     resource: "@ATSMovieBundle/Controller/DefaultController.php"
 
+security:
+    type:     annotation
+    resource: "@ATSMovieBundle/Controller/SecurityController.php"
+
+account:
+    type:     annotation
+    resource: "@ATSMovieBundle/Controller/AccountController.php"
+
 api:
     type:     rest
-    resource: "@ATSMovieBundle/Controller/"
+    resource: "@ATSMovieBundle/Controller/MovieController.php"
