--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+login_check:
+    path: /account/check
+logout:
+    path: /logout
+
 app:
     type:     rest
     resource: "@ATSMovieBundle/Resources/config/routing.yml"
