--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.1",
         "leafo/lessphp": "^0.5.0",
+        "patchwork/jsqueeze": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/assetic-bundle": "^2.8",
